syntax = "proto3";

option go_package = "./pb";

import "proto/header.proto";

package pb;

message GateLoginReq {
    common.Header header = 1;
    string roldId = 2;
}

message GateLoginResp {
    common.Header header = 1;
    int64 connId = 2;
}

service gate {
}